--- a/index.html
+++ b/index.html
@@ -2005,11 +2005,24 @@ body.modal-open {
     <button class="close-btn" onclick="closeLogistics('logisticsCenterModal')">❌</button>
   </div>
 
-  <div id="CCTVSecurity" class="glass-modal">
-    <iframe src="https://bpstech.online/d/e7cd0ba2-b2c8-4163-a95e-b6d540feb2f3/cctv-5-2-only-granfana?orgId=1&refresh=5s&from=1752598800000&to=1752632865506"
-            style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
-    <button class="close-btn" onclick="closeLogistics('CCTVSecurity')">❌</button>
-  </div>
+
+    <!-- CCTVSecurity -->
+<div id="CCTVSecurity" class="glass-modal">
+  <p style="position:absolute; z-index:20; left:12px; top:12px; margin:0;">
+    <a href="https://bpstech.online/d/e7cd0ba2-b2c8-4163-a95e-b6d540feb2f3/cctv-5-2-only-granfana?orgId=1&refresh=5s&from=1752598800000&to=1752632865506"
+       target="_blank" rel="noopener noreferrer"
+       style="font-size:16px; text-decoration:none; color:#00eaff;">
+      🌐 เปิด CCTV Security
+    </a>
+  </p>
+  <img
+    src="https://lh3.googleusercontent.com/d/1a-t4hwu9i4yu-_p_kG3FwPCoKr_wZRIB"
+    alt="CCTV Security Snapshot"
+    class="embed-media"
+  />
+  <button class="close-btn" onclick="closeLogistics('CCTVSecurity')">❌</button>
+</div>
+  
 
   <div id="CCTV-WH" class="glass-modal">
     <iframe src="https://supakit148.github.io/smart-dashboard/"
@@ -2028,33 +2041,72 @@ body.modal-open {
             style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
     <button class="close-btn" onclick="closeLogistics('CCTV-HQ')">❌</button>
   </div>
+  
 
-  <div id="ElectricalSystem" class="glass-modal">
-    <iframe src="https://bpstech.online/d/ad6df34b-7a83-4795-9f4f-fcb54b5024cf/evoair-rev1?orgId=1&from=1752549386683&to=1752552986683"
-            style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
-    <button class="close-btn" onclick="closeLogistics('ElectricalSystem')">❌</button>
-  </div>
+<!-- ElectricalSystem -->
+<div id="ElectricalSystem" class="glass-modal">
+  <!-- ปุ่มเปิดพอร์ทัลในแท็บใหม่ -->
+  <p style="position:absolute; z-index:20; left:12px; top:12px; margin:0;">
+    <a href="https://bpstech.online/d/ad6df34b-7a83-4795-9f4f-fcb54b5024cf/evoair-rev1?orgId=1&from=1752549386683&to=1752552986683"
+       target="_blank" rel="noopener noreferrer"
+       style="font-size:16px; text-decoration:none; color:#00eaff;">
+      🌐 เปิด Electrical System
+    </a>
+  </p>
 
-  <div id="WaterSystem" class="glass-modal">
-    <iframe src="https://bpstech.online/d/e398f637-3c20-4529-9ff4-517e8bf2b7d5/2ea5407a-6f7f-5825-8d08-da9c3d368296?orgId=1&refresh=5s&from=1735664400000&to=1767200399999"
-            style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
-    <button class="close-btn" onclick="closeLogistics('WaterSystem')">❌</button>
-  </div>
+  <!-- รูปพรีวิวจาก Google Drive (ใช้ lh3 + FILE_ID) -->
+  <img
+    src="https://lh3.googleusercontent.com/d/1M4BJVirXouSP49eXKZKpAxbTZEJn7jtn"
+    alt="Electrical System Snapshot"
+    class="embed-media"
+  />
+
+  <button class="close-btn" onclick="closeLogistics('ElectricalSystem')">❌</button>
+</div>
+
+  
+
+<!-- WaterSystem -->
+<div id="WaterSystem" class="glass-modal">
+  <p style="position:absolute; z-index:20; left:12px; top:12px; margin:0;">
+    <a href="https://bpstech.online/d/e398f637-3c20-4529-9ff4-517e8bf2b7d5/2ea5407a-6f7f-5825-8d08-da9c3d368296?orgId=1&refresh=5s&from=1735664400000&to=1767200399999"
+       target="_blank" rel="noopener noreferrer"
+       style="font-size:16px; text-decoration:none; color:#00eaff;">
+      🌐 เปิด Water System
+    </a>
+  </p>
+  <img
+    src="https://lh3.googleusercontent.com/d/1HGXB7d1w8sTiw2QbYfBB8Vo9F6fC-S06"
+    alt="Water System Snapshot"
+    class="embed-media"
+  />
+  <button class="close-btn" onclick="closeLogistics('WaterSystem')">❌</button>
+</div>
 
   <div id="FreshAir" class="glass-modal">
     <iframe src="https://bpstech.online/d/e292748b-da2c-4d29-9990-0262a6cd519e/air-q-demo-rev0?orgId=1&refresh=5s&from=now-1h&to=now"
             style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
     <button class="close-btn" onclick="closeLogistics('FreshAir')">❌</button>
   </div>
+  
 
-    <div id="SolarCell" class="glass-modal">
-      <img
-        src="https://lh3.googleusercontent.com/d/1VP3-U0l0QxFb8b-R3puq7EBJQcCKAITs"
-        alt="SolarCell"
-        class="embed-media"
-      />
-      <button class="close-btn" onclick="closeLogistics('SolarCell')">❌</button>
-    </div>
+<!-- SolarCell -->
+<div id="SolarCell" class="glass-modal">
+  <p style="position:absolute; z-index:20; left:12px; top:12px; margin:0;">
+    <a href="https://docs.google.com/spreadsheets/d/1723prYCtb3ySIGvHYZDkekWP97k8IiKd5-pm9php-JE/edit?gid=1992529255#gid=1992529255"
+       target="_blank" rel="noopener noreferrer"
+       style="font-size:16px; text-decoration:none; color:#00eaff;">
+      🌐 เปิด Solar Cell Sheet
+    </a>
+  </p>
+  <img
+    src="https://lh3.googleusercontent.com/d/1VP3-U0l0QxFb8b-R3puq7EBJQcCKAITs"
+    alt="Solar Cell Snapshot"
+    class="embed-media"
+  />
+  <button class="close-btn" onclick="closeLogistics('SolarCell')">❌</button>
+</div>
+    
 
   <div id="FiberOptic" class="glass-modal">
       <a href="https://bpstech.online/d/fe15b960-5bda-4051-b87b-2bbec6d29461/project-fiber-check-material-rev1?orgId=1&from=1753376400000&to=1753416393714" target="_blank" style="font-size:18px; text-decoration:none;">
