--- a/index.html
+++ b/index.html
@@ -2826,7 +2826,9 @@ body.modal-open {
     '2nd_Floor' : 'fae2731cfddc4b9dab3f43bed1724857',
     '3rd_Floor' : 'f5034d3514414c92aa4dc5d95c6513e7',
     '4th_Floor' : '317cf905f70c4e6fbce4beee8206c446',
-    'Roof_Level': 'aeafd4ec7a1b49de83510bb3cf08bc7b'
+    'Roof_Level': 'aeafd4ec7a1b49de83510bb3cf08bc7b',
+    'WH' : '2e29b7e958b84f4e8741a5f3cedbfb79',
+    'UDS' : 'b9bf5ba8428247b69fc6a772b9b1b649'
   };
   // ========================================================================
 
@@ -4573,3 +4575,4 @@ function runDemo(){
 
 </body>
 </html>
+
