--- a/index.html
+++ b/index.html
@@ -2821,6 +2821,7 @@ body.modal-open {
   //สำรอง 6a3d574afb3b447986604c9ab478ac12
   //สำรอง 7adcd28260174cf58dd2672e1e189426
   const ANNO_TO_MODEL = {
+    'BPS-Inside' : '937eb9eaca09469184a806982658b4cd',
     '1st_Floor' : '78c790b7e74843139138cac1d852f05d',
     'M_Floor'   : '69350240005d4d43ae8800c5b7ab79d7',
     '2nd_Floor' : 'fae2731cfddc4b9dab3f43bed1724857',
@@ -4575,4 +4576,5 @@ function runDemo(){
 
 </body>
 </html>
+
 
