--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -1297,6 +1296,41 @@ body.modal-open {
 .menu-buttons .dropdown { position: relative; z-index: 10010; }
 .menu-buttons .dd-menu   { position: absolute; z-index: 10020; }
 
+/* === Bottom full-width image bar === */
+.bottom-image-container{
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;                 /* ชิดล่างจอ */
+  width: 100vw;
+  background: rgba(0,0,0,0.65);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+  z-index: 25000;            /* สูงกว่า glass-modal (20000) */
+  padding: 6px 0 0 0;        /* เว้นนิดให้ดูลอย */
+  display: none;             /* เริ่มซ่อน */
+}
+
+.bottom-image-container.active{ display:block; }
+
+.bottom-image-container img{
+  display:block;
+  width:100%;
+  height:auto;
+  max-height:45vh;           /* กันสูงเกินครึ่งจอ */
+  object-fit:cover;          /* ให้เต็มแถบล่าง */
+  border-radius: 8px 8px 0 0;
+  border: 1px solid #00eaff55;
+  box-shadow: 0 0 12px #00eaff66;
+}
+
+.bottom-image-container .close-btn{
+  position:absolute;
+  top:6px;
+  right:8px;
+  z-index:2;
+}
+
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -2347,6 +2381,7 @@ body.modal-open {
   <div class="audio-bars-container">
     <div class="bars" id="audioBars"></div>
   </div>
+  
 
   <script>
     // Visualizer
@@ -2652,6 +2687,14 @@ body.modal-open {
               const modalImg9 = document.getElementById("modalImg9");
               if (modalImg9 && img9) modalImg9.src = img9;
               document.getElementById("datetime9").innerText = text1;
+              
+            // กล้องที่กำลังเลือก (ด้านล่างอันใหญ่)
+            const img10  = row[2]?.v || '';
+            const modalImg10 = document.getElementById("modalImg10");
+            if (modalImg10 && img10){
+              modalImg10.src = img10;
+              document.getElementById('bottomImageBar').classList.add('active');  // ✅ เปิดแถบล่าง
+            } else { document.getElementById('bottomImageBar').classList.remove('active'); }
 
               // กล้อง 2 (ถัดแถว)
               const row2  = rows[i+1]?.c || [];
@@ -4617,10 +4660,14 @@ function runDemo(){
 </script>
 
 
+<!-- แถบล่างแสดงรูปเต็มความกว้าง -->
+<div id="bottomImageBar" class="bottom-image-container">
+  <img id="modalImg10" alt="Bottom Camera" />
+  <button class="close-btn" onclick="document.getElementById('bottomImageBar').classList.remove('active')">❌</button>
+</div>
 
 
 </body>
 </html>
-
 
 
