--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
     
     .cctv-col-left, .cctv-col-right, .cctv-col-center{
       position: fixed;
-      bottom: var(--safe-bottom);
+      top: 35px;
       display: flex;
       flex-direction: column;
       gap: var(--gap);
@@ -4669,6 +4669,5 @@ function runDemo(){
 
 </body>
 </html>
-
 
 
