--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       --gap: 12px;
       --card-w: clamp(180px, 20vw, 280px);
       --ratio: 16/9;
-      --safe-bottom: calc(8vh + 36px); /* เว้นปุ่ม control Sketchfab */
+      --bottom-cam-h: 14vh;                         /* สูงจอล่าง ปรับได้ */
+      --safe-bottom: calc(var(--bottom-cam-h) + 36px);  /* กันพื้นที่ให้คอลัมน์/ปุ่ม */
       
       --top-h: 64px;     /* ความสูง .top */
       --left-w: 320px;   /* ความกว้าง .left */
@@ -1329,6 +1330,37 @@ body.modal-open {
   top:6px;
   right:8px;
   z-index:2;
+}
+
+#bottomCam{
+  position: fixed;
+  /* เว้นด้านซ้าย/ขวาตามความกว้างของบล็อก */
+  left: var(--left-w);
+  right: var(--right-w);
+  bottom: 0;
+
+  height: var(--bottom-cam-h);
+  margin: 0 auto;                                /* จัดกึ่งกลาง */
+  max-width: calc(100vw - var(--left-w) - var(--right-w));
+  background: rgba(0,0,0,.35);
+  backdrop-filter: blur(6px);
+  border-top: 1px solid rgba(0,255,255,.25);
+  border-radius: 12px 12px 0 0;                  /* โค้งขอบด้านบนเล็กน้อย */
+  z-index: 9000;                                 /* ต่ำกว่าคอลัมน์กล้อง (10000) */
+  overflow: hidden;
+}
+
+#bottomCam img{
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;     /* ถ้าอยากเห็นภาพทั้งใบ ใช้ 'contain' ได้ */
+  object-position: center;
+}
+
+/* จอแคบมาก ๆ ให้กินเต็มเพื่อความยืดหยุ่น */
+@media (max-width: 900px){
+  #bottomCam{ left: 0; right: 0; max-width: 100vw; }
 }
 
   </style>
@@ -4669,5 +4701,4 @@ function runDemo(){
 
 </body>
 </html>
-
 
