--- a/index.html
+++ b/index.html
@@ -2721,12 +2721,12 @@ body.modal-open {
               document.getElementById("datetime9").innerText = text1;
               
             // กล้องที่กำลังเลือก (ด้านล่างอันใหญ่)
-            const img10  = row[2]?.v || '';
-            const modalImg10 = document.getElementById("modalImg10");
-            if (modalImg10 && img10){
-              modalImg10.src = img10;
-              document.getElementById('bottomImageBar').classList.add('active');  // ✅ เปิดแถบล่าง
-            } else { document.getElementById('bottomImageBar').classList.remove('active'); }
+              const img10  = row[2]?.v || '';
+              const modalImg10 = document.getElementById("modalImg10");
+              if (modalImg10 && img10){
+                modalImg10.src = img10;
+                document.getElementById('bottomCam').style.display = 'block'; // ← โชว์จอล่าง
+              }
 
               // กล้อง 2 (ถัดแถว)
               const row2  = rows[i+1]?.c || [];
@@ -4692,13 +4692,13 @@ function runDemo(){
 </script>
 
 
-<!-- แถบล่างแสดงรูปเต็มความกว้าง -->
-<div id="bottomImageBar" class="bottom-image-container">
-  <img id="modalImg10" alt="Bottom Camera" />
-  <button class="close-btn" onclick="document.getElementById('bottomImageBar').classList.remove('active')">❌</button>
+<!-- ===== Bottom full-width camera (centered between left/right blocks) ===== -->
+<div id="bottomCam" style="display:none;">
+  <img id="modalImg10" alt="Bottom Camera">
 </div>
 
 
 </body>
 </html>
+
 
