--- a/index.html
+++ b/index.html
@@ -1361,10 +1361,10 @@ body.modal-open {
   pointer-events:none;
   background: linear-gradient(
     to bottom,
-    rgba(0,0,0,0) 0%,
-    rgba(0,0,0,.20) 40%,
-    rgba(0,0,0,.45) 70%,
-    rgba(0,0,0,.75) 100%
+    rgba(0,0,0,.75) 0%,
+    rgba(0,0,0,.45) 40%,
+    rgba(0,0,0,.20) 70%,
+    rgba(0,0,0,0) 100%
   );
 }
 
@@ -4724,6 +4724,7 @@ function runDemo(){
 
 </body>
 </html>
+
 
 
 
