--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@ body.modal-open {
   height: auto;                 /* <— สำคัญ: อย่าบังคับสูง */
   display: block;
   object-fit: contain;          /* เห็นรูปทั้งใบแบบคม ๆ */
-  object-position: center;    /* จัดกลางเฟรม */
+  object-position: bottom;    /* จัดกลางเฟรม */
   background: #000;           /* พื้นหลังดำเวลาเหลือขอบ */
   image-rendering: -webkit-optimize-contrast; /* เพิ่มความคม (บางเบราว์เซอร์) */
   image-rendering: crisp-edges; /* fallback */
@@ -4726,6 +4726,7 @@ function runDemo(){
 
 </body>
 </html>
+
 
 
 
