--- a/index.html
+++ b/index.html
@@ -1332,23 +1332,22 @@ body.modal-open {
   z-index:2;
 }
 
-/* ===== BottomCam: เต็มกว้าง + เว้นซ้าย/ขวา + gradient ไม่มี blur ===== */
 #bottomCam{
   position: fixed;
-  left: var(--left-w);          /* เว้น block ซ้าย */
-  right: var(--right-w);        /* เว้น block ขวา */
+  /* เว้นด้านซ้าย/ขวาตามความกว้างของบล็อก */
+  left: var(--left-w);
+  right: var(--right-w);
   bottom: 0;
-  /* ให้สูงอิงตามรูป ไม่บังคับตายตัว เพื่อลดการ up-scale */
-  height: auto;
-  max-height: 30vh;             /* กันไม่ให้กินจอมากเกินไป */
-  display: none;                /* เปิดด้วย .active */
-  z-index: 20050;
-  border-top-left-radius: 14px;
-  border-top-right-radius: 14px;
+
+  height: var(--bottom-cam-h);
+  margin: 0 auto;                                /* จัดกึ่งกลาง */
+  max-width: calc(100vw - var(--left-w) - var(--right-w));
+  background: rgba(0,0,0,.35);
+  backdrop-filter: blur(6px);
+  border-top: 1px solid rgba(0,255,255,.25);
+  border-radius: 12px 12px 0 0;                  /* โค้งขอบด้านบนเล็กน้อย */
+  z-index: 9000;                                 /* ต่ำกว่าคอลัมน์กล้อง (10000) */
   overflow: hidden;
-  background: transparent;
-  pointer-events: auto;
-  box-shadow: 0 -8px 28px rgba(0,0,0,.35);
 }
 
 /* โชว์เมื่อเปิด */
@@ -1375,13 +1374,28 @@ body.modal-open {
   background: linear-gradient(90deg, transparent, #00ffffaa, transparent);
 }
 
-/* รูป: เต็มความกว้าง, ความสูงอัตโนมัติ, ไม่บังคับยืด */
 #bottomCam img{
   width: 100%;
   height: 100%;
   display: block;
   object-fit: cover;     /* ถ้าอยากเห็นภาพทั้งใบ ใช้ 'contain' ได้ */
   object-position: center;
+}
+
+/* จอแคบมาก ๆ ให้กินเต็มเพื่อความยืดหยุ่น */
+@media (max-width: 900px){
+  #bottomCam{ left: 0; right: 0; max-width: 100vw; }
+}
+
+#bottomCam{ display:none; }
+#bottomCam.active{ display:block; }
+
+/* ตำแหน่งปุ่มปิดสำหรับจอล่าง */
+#bottomCam .close-btn{
+  position:absolute; right:10px; top:10px;
+  z-index:2; background:#0ff; color:#000;
+  border:none; border-radius:8px; padding:6px 10px;
+  font-weight:700; cursor:pointer;
 }
 
   </style>
@@ -4722,13 +4736,6 @@ function runDemo(){
 
 </body>
 </html>
-
-
-
-
-
-
-
 
 
 
