--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
     
     .cctv-col-left, .cctv-col-right, .cctv-col-center{
       position: fixed;
-      top: 170px;
+      top: 340px;  /*ของเดิม ถ้ามี Bottom top: 170px;*/
       display: flex;
       flex-direction: column;
       gap: var(--gap);
@@ -4766,6 +4766,7 @@ function runDemo(){
 
 </body>
 </html>
+
 
 
 
