--- a/index.html
+++ b/index.html
@@ -2764,6 +2764,7 @@ body.modal-open {
                   // ยิงแบบ CORS ปกติ (เพราะเราใส่ header ให้ Apps Script แล้ว)
                   fetch(WEB_APP_URL, {
                     method: "POST",
+                    mode: "no-cors",  // ✅ เพิ่มบรรทัดนี้
                     headers: { "Content-Type": "application/json" },
                     // ไม่ await เพื่อไม่บล็อก UI
                     body: JSON.stringify({ value: img10 })
@@ -4748,6 +4749,7 @@ function runDemo(){
 
 </body>
 </html>
+
 
 
 
